rust/tests/snapshots/test_analysis__analysis_pulp.snap
---
source: rust/tests/test_analysis.rs
expression: analysis
---
summary:
  name: copynumber
  sense: Minimize
  objective_count: 1
  constraint_count: 49
  variable_count: 62
  total_nonzeros: 199
  density: 0.0655
sparsity:
  min_vars_per_constraint: 2
  max_vars_per_constraint: 49
variables:
  type_distribution:
    free: 1
    unspecified: 48
    general: 13
    lower_bounded: 0
    upper_bounded: 0
    double_bounded: 0
    binary: 0
    integer: 0
    semi_continuous: 0
    sos: 0
  free_variables:
    - PenaltyTree_48
  fixed_variables: []
  invalid_bounds: []
  unused_variables: []
  discrete_variable_count: 13
constraints:
  type_distribution:
    equality: 1
    less_than_equal: 24
    greater_than_equal: 24
    less_than: 0
    greater_than: 0
    sos1: 0
    sos2: 0
  empty_constraints: []
  singleton_constraints: []
  rhs_range:
    min: 0
    max: 9.80665154278
    count: 49
  sos_summary:
    s1_count: 0
    s2_count: 0
    total_sos_variables: 0
coefficients:
  constraint_coeff_range:
    min: 0.02
    max: 4
    count: 199
  objective_coeff_range:
    min: 1
    max: 1
    count: 1
  large_coefficients: []
  small_coefficients: []
  coefficient_ratio: 200
issues: []
