rust/tests/snapshots/test_analysis__analysis_sc50a.snap
---
source: rust/tests/test_analysis.rs
expression: analysis
---
summary:
  name: sc50a.lp
  sense: Minimize
  objective_count: 1
  constraint_count: 49
  variable_count: 48
  total_nonzeros: 130
  density: 0.05527
  quadratic_objective_terms: 0
  quadratic_constraint_terms: 0
sparsity:
  min_vars_per_constraint: 2
  max_vars_per_constraint: 4
variables:
  type_distribution:
    free: 0
    unspecified: 48
    general: 0
    lower_bounded: 0
    upper_bounded: 0
    double_bounded: 0
    binary: 0
    integer: 0
    semi_continuous: 0
    semi_integer: 0
    sos: 0
  free_variables: []
  fixed_variables: []
  invalid_bounds: []
  unused_variables: []
  discrete_variable_count: 0
constraints:
  type_distribution:
    equality: 20
    less_than_equal: 29
    greater_than_equal: 0
    less_than: 0
    greater_than: 0
    sos1: 0
    sos2: 0
    indicator: 0
    quadratic: 0
    general: 0
    lazy: 0
    user_cuts: 0
  empty_constraints: []
  singleton_constraints: []
  rhs_range:
    min: 0
    max: 170
    count: 49
  sos_summary:
    s1_count: 0
    s2_count: 0
    total_sos_variables: 0
coefficients:
  constraint_coeff_range:
    min: 0.1
    max: 2
    count: 130
  objective_coeff_range:
    min: 1
    max: 1
    count: 1
  large_coefficients: []
  small_coefficients: []
  coefficient_ratio: 20
issues:
  - severity: Warning
    category: Other
    message: "Problem may be over-constrained: 49 constraints for 48 variables"
    details: Over-constrained problems often have degenerate or infeasible solutions
